--- a/CSS/position/index.html
+++ b/CSS/position/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello  positoksjksjd</h1>
+    <!-- <div class="main"></div> -->
+
+    <!--  css position -->
+    <!-- relative absolute fixed stikey -->
+
+    <div class="container">
+        <div class="box" id="item1">BOX1</div>
+        <div class="box" id="item2">BOX2</div>
+        <div class="box" id="item3">BOX3</div>
+        <div class="box" id="item4">BOX4</div>
+    </div>
+
+
+<!-- <img src="download.jpg" alt="">
+<p>Lorem, ipsum dolor.</p> -->
+
+
+
 </body>
 </html>
